Upload old assets

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>GrepodataFrontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<base href="/">
+	<meta charset="utf-8">
+	<link rel="icon" href="assets/images/grepodata_icon.ico">
+
+	<title>GrepoData - Grepolis Statistics</title>
+	<meta name="Description" content="GrepoData Advanced tools and statistics for the MMOG Grepolis. Everything you need to take your gameplay to the next level: Enemy city intelligence, Daily scoreboard, player/alliance stats and more!">
+	<meta name="Keywords" content="Grepolis Grepo grepolis grepo data stats statistics analytics scoreboard daily today yesterday score search rank ranking rankings city town player alliance intel intelligence index indexer tool script scripts userscript tampermonkey">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
