New design for authenticated user

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link data-react-helmet="true" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="assets/vendor/cookieconsent/cookieconsent.min.css" />
   <script src="assets/vendor/cookieconsent/cookieconsent.min.js"></script>
