--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 
   <link rel="stylesheet" type="text/css" href="assets/vendor/cookieconsent/cookieconsent.min.css" />
   <script src="assets/vendor/cookieconsent/cookieconsent.min.js"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
